--- a/manifest.json
+++ b/manifest.json
@@ -1,25 +1,26 @@
 {
-  "name": "Example",
-  "short_name": "Example",
-  "description": "Example App",
-  "start_url": "/",
-  "scope": "/",
-  "background_color": "#ffffff",
-  "theme_color": "#ffffff",
-  "dir" : "ltr",
-  "display": "fullscreen",
-  "orientation": "landscape",
-  "screenshots": [],
-  "icons": [
-      {
-          "src": "/src/192x192.png",
-          "sizes": "192x192",
-          "type": "image/png"
-      },
-      {
-          "src": "/src/512x512.png",
-          "sizes": "512x512",
-          "type": "image/png"
-      }
-  ]
+    "name": "PWAshop",
+    "short_name": "PWAshop",
+    "description": "shopping page with PWA",
+    "id": "PWAshop",
+    "start_url": "/",
+    "scope": "/",
+    "background_color": "#ffffff",
+    "theme_color": "#ffffff",
+    "dir" : "ltr",
+    "display": "fullscreen",
+    "orientation": "landscape",
+    "screenshots": [],
+    "icons": [
+        {
+            "src": "/src/192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "/src/512x512.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ]
 }
